# music_quick

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
docs/plans/: 2026-06-17-music-quick-parity-plan.md
docs/superpowers/plans/: 2026-06-29-music-quick-android.md
examples/MusicSiteProbe/: main.cpp
installer/: MusicQuick.iss
qml/: Icons.qml  Main.qml  Theme.qml
qml/components/: AppIcon.qml  AppSidebar.qml  CardDialog.qml  CardDialogButton.qml  CardDialogSurface.qml  ClickSpark.qml  CreatePlaylistDialog.qml  FeaturedPlaylistCard.qml  IconTransportButton.qml  ImportPlaylistDialog.qml  InfiniteMenu.qml  LocalMusicList.qml  LyricsPanel.qml  NowPlayingView.qml  PlaybackBar.qml  QueueDialog.qml  SearchResultList.qml  SideNav.qml  SongList.qml  StaggeredMenu.qml  SurfaceCard.qml  TopBar.qml  VinylDisc.qml  WallpaperBackground.qml  WindowControls.qml
qml/components/settings/: SettingsCard.qml  SettingsContentView.qml  SettingsGeneralPanel.qml  SettingsPanelLayout.qml  SettingsPersonalPanel.qml  SettingsRow.qml  SettingsSystemPanel.qml  SettingsThemePanel.qml
qml/pages/: DiscoverPage.qml  FeaturedPlaylistPage.qml  HomePage.qml  LocalMusicPage.qml  PlaylistPage.qml  SearchPage.qml  SettingsPage.qml
resources/: app_icons.qrc
scripts/: deploy.ps1  fix-gradle.ps1  learn_music_site_probe.py
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppStorage.cpp  AppStorage.h  CoverImageProvider.cpp  CoverImageProvider.h  FeaturedPlaylistCacheStore.cpp  FeaturedPlaylistCacheStore.h  FeaturedPlaylistCatalog.cpp  FeaturedPlaylistCatalog.h  MediaCacheManager.cpp  MediaCacheManager.h  PlaylistImportManager.cpp  PlaylistImportManager.h  PlaylistImportPreviewModel.cpp  PlaylistImportPreviewModel.h  PlaylistStore.cpp  PlaylistStore.h  PlaylistTrackModel.cpp  PlaylistTrackModel.h  SearchResultModel.cpp  SearchResultModel.h  TrackListModel.cpp  TrackListModel.h
src/core/: AudioPlayer.cpp  AudioPlayer.h  PlaybackController.cpp  PlaybackController.h  PlaybackMode.h  PlaybackQueueState.h
src/media/: TrackListUtils.cpp  TrackListUtils.h  TrackMetadata.h  TrackMetadataReader.cpp  TrackMetadataReader.h
src/network/: CurlHttpClient.cpp  CurlHttpClient.h  ExternalPlaylistImporter.cpp  ExternalPlaylistImporter.h  GequbaoClient.cpp  GequbaoClient.h  GequbaoParser.cpp  GequbaoParser.h  LocalStreamProxy.cpp  LocalStreamProxy.h  MusicSourceClient.h  MusicSourceRegistry.cpp  MusicSourceRegistry.h  MyFreeMp3Client.cpp  MyFreeMp3Client.h  MyFreeMp3Parser.cpp  MyFreeMp3Parser.h  OnlineSongId.cpp  OnlineSongId.h  OnlineStreamLoader.cpp  OnlineStreamLoader.h  OnlineTrack.h  StreamFetchOptions.h
tests/: test_core.cpp
